alignment issues fixed

--- a/resources/index.css
+++ b/resources/index.css
@@ -43,7 +43,9 @@
 }
 
 .contentContainer {
-    width: 70vw;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
 }
 
 .unOrderedList {
@@ -59,8 +61,8 @@
     padding: 10px;
     color: white;
     border-radius: 6px;
-    width: 250px;
-    height: 70px;
+    width: 300px;
+    height: 90px;
     font-weight: bold;
     font-size: 30px;
     display: flex;
@@ -74,6 +76,7 @@
 .itemsContainer {
     display: flex;
     justify-content: flex-end;
+    width: 40%;
 }
 
 .secondaryList li {
@@ -113,8 +116,8 @@
 
 .FooterContainer {
     position: absolute;
-    bottom: 20px;
-    width: 50%;
+    bottom: 30px;
+    width: 60%;
 }
 
 .ticketNumberBox {
@@ -168,26 +171,25 @@
 }
 
 .customCarousel {
-    width: 90%;
+    width: 100%;
     border-radius: 10px;
     top: 5%;
+    align-self: center;
 }
 .ticketNumberBox h1 {
     font-weight: bold;
 }
 
-@media screen and (max-height: 800px) {
+@media screen and (max-height: 750px) {
     .customCarousel {
-        width: 80%;
+        width: 75%;
     }
     .unOrderedList li {
-        height: 50px;
+        height: 70px;
     }
-    .contentContainer {
-        padding-left: 100px;
-    }
-    .itemsContainer {
-        padding-right: 60px;
+    .FooterContainer {
+        width: 58%;
+        bottom: 20px;
     }
 }
 
